k8/manifest/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:                      
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend    
  labels:                     
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: rihabab/spring2:latest
        ports:
        - containerPort: 8080
          name: backend-port
        # resources:
        #   limits:
        #     memory: "500Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "250Mi"
        #     cpu: "250m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 200
          timeoutSeconds: 10
          periodSeconds: 30
