k8/manifest/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:                        
    app: mysqldb
spec:
  selector:
    app: mysqldb
  ports:
  - port: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
  labels:                           
    app: mysqldb
spec:
  replicas: 2
  serviceName: mysqldb
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql
        ports:
        - containerPort: 3306
          name: db-port
        volumeMounts:
        - name: mysql-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
